@@ -434,6 +434,11 @@ by 1E3.
 .It Ar fosc off
 Turn the master oscillator off.
 .Em Only supported on the STK500 programmer.
+.It Ar sck period
+Set the SCK clock period to
+.Ar period
+microseconds.
+.Em Only supported on the STK500 programmer.
 .It Ar parms
 Display the current voltage and master oscillator parameters.
 .Em Only supported on the STK500 programmer.
